<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivPhotoProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/welcome"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/ivPhotoProfile"
            app:layout_constraintTop_toTopOf="@+id/ivPhotoProfile" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHomeMenu"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:padding="20dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_greeting_card">

                <ImageView
                    android:id="@+id/imgPattern"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:alpha="0.12"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pattern"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <TextView
                    android:id="@+id/tvGreeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/greeting"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSurahName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/tvSurah"
                    android:textColor="#ffffff"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvGreeting"
                    app:layout_constraintTop_toBottomOf="@+id/tvGreeting" />

                <TextView
                    android:id="@+id/tvArtiSurah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/artiSurah"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tvSurahName"
                    app:layout_constraintTop_toBottomOf="@+id/tvSurahName" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRead"
                    android:layout_width="145dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/bacaSekarang"
                    android:textColor="#FF7A00"
                    android:textSize="14sp"
                    app:cornerRadius="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvArtiSurah" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="240dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/menu"
            android:textColor="@color/textPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/cardHomeMenu"
            app:layout_constraintStart_toStartOf="@+id/cardHomeMenu"
            app:layout_constraintTop_toBottomOf="@+id/cardHomeMenu" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/tvMenu"
            app:layout_constraintStart_toStartOf="@+id/tvMenu"
            app:layout_constraintTop_toBottomOf="@+id/tvMenu" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/quoteCard"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvHomeMenu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_quote_card">

                <ImageView
                    android:id="@+id/imgMosque"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:alpha="0.08"
                    android:scaleType="fitXY"
                    android:src="@drawable/mosque_silluete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvTitleAyatHari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ayatHariIni"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvAyatHari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    android:text="@string/basmallah"
                    android:textColor="@color/primaryDark"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleAyatHari" />

                <TextView
                    android:id="@+id/tvTranslateAyatHari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textPrimary"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/artiAyat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAyatHari" />

                <TextView
                    android:id="@+id/tvSurahNameHari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/namaSurahHari"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTranslateAyatHari" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/rvHomeMenu" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.core.widget.NestedScrollView>